2006-12-20  Aaron Faupell  <afaupell@users.sourceforge.net>

	* tar.tcl: fix in parseOpts which affected -file and -glob
	arguments to tar::untar
	* tar.man: clarifications to add, create, and untar

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-29-06  Aaron Faupell  <afaupell@users.sourceforge.net>

	* tar.tcl: fixed bug in parseOpts

2005-11-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Corrected buggy commit, synchronized version
	* tar.man:      numbers across all relevant files.

2005-11-08  Aaron Faupell  <afaupell@users.sourceforge.net>

	* tar.tcl: bumped version to 0.2 because of new feature
	* tar.man: tar::remove

2005-11-07  Andreas Kupries <andreask@activestate.com>

	* tar.man: Fixed error, incorrect placement of [call] markup
	  outside of list.

2005-11-04  Aaron Faupell  <afaupell@users.sourceforge.net>

	* tar.man: added tar::remove command and documentation for it
	* tar.tcl:

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-09-30  Andreas Kupries <andreask@activestate.com>

	* tar.tcl: qualified all [open] calls with :: to ensure usag of
	  the builtin. Apparently mitigates conflict between this package
	  and the vfs::tar module.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-10-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tar.man: Added keywords and title/module description to the
	  documentation.

2004-09-10  Aaron Faupell  <afaupell@users.sourceforge.net>

	* tar.tcl: Fixed typo bug in ::tar::add
	* tar.man: Added info for ::tar::stat

2004-08-23  Andreas Kupries  <andreask@activestate.com>

	* tar.man: Fixed problems in the documentation.
